bpo-38302. __rpow__ now called when __ipow__ returns NotImplemented